完善回拨功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
   ~ Copyright (c) 2016.
   -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">全球手购</string>
+    <string name="app_name">手购全球</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hint_search_text">轻击搜索号码</string>
     <string name="xlistview_header_hint_normal">下拉刷新</string>
@@ -97,6 +97,8 @@
     <string name="title_activity_callback_call_log_list">呼叫记录</string>
     <!-- 回拨充值记录列表Activity -->
     <string name="title_activity_callback_recharge_log_list">充值记录</string>
+    <!-- 回拨呼叫等待Activity -->
+    <string name="title_activity_callback_call_waiting">呼叫等待</string>
     <string name="yes">是</string>
     <string name="no">否</string>
     <string name="downloading">正在下载</string>
@@ -254,4 +256,8 @@
     <string name="title_activity_shop_products_manage">商品管理</string>
     <!-- 添加商品Activity -->
     <string name="title_activity_product_add">添加商品</string>
+    <!-- 编辑商品Activity -->
+    <string name="title_activity_product_edit">编辑商品</string>
+    <!-- 商家订单管理Activity -->
+    <string name="title_activity_orders_manage">订单管理</string>
 </resources>
