--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,6 +99,8 @@
     <string name="title_activity_callback_recharge_log_list">充值记录</string>
     <!-- 回拨呼叫等待Activity -->
     <string name="title_activity_callback_call_waiting">呼叫等待</string>
+    <!-- 重置密码Activity -->
+    <string name="title_activity_reset_pwd">重置密码</string>
     <string name="yes">是</string>
     <string name="no">否</string>
     <string name="downloading">正在下载</string>
@@ -260,4 +262,8 @@
     <string name="title_activity_product_edit">编辑商品</string>
     <!-- 商家订单管理Activity -->
     <string name="title_activity_orders_manage">订单管理</string>
+    <!-- 商家订单信息Activity -->
+    <string name="title_activity_order_info">订单详情</string>
+    <!-- 商家订单发货Activity -->
+    <string name="title_activity_order_ship">订单发货</string>
 </resources>
