--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,10 +138,15 @@
     <string name="title_activity_shop_list">微店列表</string>
     <!-- 分享Activity -->
     <string name="title_activity_share">分享</string>
+    <!-- 用户推荐人列表Activity -->
+    <string name="title_activity_referrer_user_list">推荐列表</string>
+    <!-- 用户分润列表Activity -->
+    <string name="title_activity_user_share_profit_list">我的业绩</string>
     <string name="dialog_title_bug_level">日志记录级别</string>
     <string name="auto_update_log">自动上报错误日志</string>
     <string name="log_tips">提示：日志级别越高记录的信息越详细，可以让开发者更全面的定位错误，但记录的越详细相应的日志文件则越大，建议选择级别3</string>
     <!-- 二维码相关 -->
+    <string name="menu_choose_pic">从图片选择</string>
     <string name="app_picker_name">应用</string>
     <string name="bookmark_picker_name">书签</string>
     <string name="button_add_calendar">添加至日程表</string>
