--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,13 +19,17 @@
     <string name="time_error">时间有问题</string>
     <string name="drawer_open">打开</string>
     <string name="drawer_close">关闭</string>
-    <string name="contacts_num">共<xliff:g id="num">%d</xliff:g>位联系人</string>
+    <string name="contacts_num">共<xliff:g id="num">%d</xliff:g>位联系人
+    </string>
     <string name="text_incoming_call">来电</string>
     <string name="text_outgoing_call">去电</string>
     <string name="text_missed_call">未接</string>
-    <string name="text_time_hour"><xliff:g id="h">%s</xliff:g>小时<xliff:g id="m">%s</xliff:g>分<xliff:g id="s">%s</xliff:g>秒</string>
-    <string name="text_time_minute"><xliff:g id="m">%s</xliff:g>分<xliff:g id="s">%s</xliff:g>秒</string>
-    <string name="text_time_second"><xliff:g id="s">%s</xliff:g>秒</string>
+    <string name="text_time_hour"><xliff:g id="h">%s</xliff:g>小时<xliff:g id="m">%s</xliff:g>分<xliff:g id="s">%s</xliff:g>秒
+    </string>
+    <string name="text_time_minute"><xliff:g id="m">%s</xliff:g>分<xliff:g id="s">%s</xliff:g>秒
+    </string>
+    <string name="text_time_second"><xliff:g id="s">%s</xliff:g>秒
+    </string>
     <string name="text_time_no_second">已拨</string>
     <string name="activity_title_contact_detail">联系人详情</string>
     <string name="activity_title_contact_edit">编辑联系人</string>
@@ -106,6 +110,8 @@
     <string name="title_activity_user_upgrade">用户等级升级</string>
     <!-- 商城卡支付Activity -->
     <string name="title_activity_pay_by_shop_card">商城卡支付</string>
+    <!-- 商城卡支付Activity -->
+    <string name="title_activity_user_point_log">积分记录</string>
     <string name="yes">是</string>
     <string name="no">否</string>
     <string name="downloading">正在下载</string>
@@ -196,7 +202,7 @@
     <string name="msg_default_format">格式</string>
     <string name="msg_default_meta">元数据</string>
     <string name="msg_default_mms_subject">Hi</string>
-    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
+    <string name="msg_default_status">请将条码置于取景框内扫描。</string>
     <string name="msg_default_time">时间</string>
     <string name="msg_default_type">类型</string>
     <string name="msg_encode_contents_failed">无法生成条码。</string>
@@ -223,7 +229,9 @@
     <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
     <string name="preferences_bulk_mode_title">批量扫描模式</string>
     <string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
-    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
+    <string name="preferences_custom_product_search_summary"
+            formatted="false">替换：％s=内容，％f=格式，％t=类型
+    </string>
     <string name="preferences_custom_product_search_title">自定义搜索网址</string>
     <string name="preferences_decode_1D_industrial_title">一维码：工业</string>
     <string name="preferences_decode_1D_product_title">一维码：商品</string>
@@ -267,7 +275,7 @@
     <string name="result_sms">找到短信号码</string>
     <string name="result_tel">找到电话号码</string>
     <string name="result_text">找到纯文本</string>
-    <string name="result_uri">找到 URL </string>
+    <string name="result_uri">找到 URL</string>
     <string name="result_wifi">找到 Wi-Fi 配置</string>
     <string name="sbc_name">Google 图书搜索</string>
     <string name="wifi_changing_network">连接到 Wi-Fi \u2026</string>
